# ingress-rust

./: Cargo.toml  Dockerfile  docker-compose.yml  entrypoint.sh
config/: default.toml
script/: timeseries.sql
src/: lib.rs  main.rs
src/config/: configs.rs  default.toml
src/db/: timescale.rs
src/domain/: heartbeat.rs
src/kafka/: consumer.rs  handler.rs  mod.rs
tests/: kafka_handler_draft.rs
