[package]
name = "ingress-rust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
chrono = "0.4.42"
config = "0.15.19"
futures = "0.3.31"
rdkafka = { version = "0.38.0", features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-tokio-native-tls", "runtime-tokio-rustls", "chrono"] }
tokio = { version = "1.48.0", features = ["full"] }